[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Crypto"
version = "0.0.1"
authors = [
  { name="duoduo6666", email="2326064185@qq.com" },
]
description = "Fast Cryptographic Algorithm Library"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Ubuntu",
]